--- a/src/app/components/view/view_data.component.scss
+++ b/src/app/components/view/view_data.component.scss
@@ -1,7 +1,12 @@
 .data-view {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: unset;
+}
+
+form {
+    margin-left: 10px;
 }
 
 .label {
@@ -19,4 +24,11 @@ input[type=text] {
 .search-btn {
     margin-left: 15px;
     padding: 5px 10px 5px 10px;
+}
+
+@media (min-width: 700px) {
+    .data-view {
+        flex-direction: row;
+        align-items: center;
+    }
 }
