--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,8 +1,5 @@
-<mat-toolbar>
-    <div class="app_name">
-        <div>Covid</div>
-        <div>Tracker</div>
-    </div>
+<mat-toolbar color="primary">
+    <div>COVID-19 Tracker</div>
 </mat-toolbar>
 <app-map></app-map>
 <app-view></app-view>
